update code test.html và style.css

--- a/test.html
+++ b/test.html
@@ -1,1 +1,10 @@
-dfgdgfdgf
+<html>
+    <head>
+        
+    </head>
+    <body>
+        <div class="test">
+            
+        </div>
+    </body>
+</html>
